stateDiagram-v2
  [*] --> planned
  planned --> running: validation complete; owner acquired
  planned --> cancelled: cancelled before execution
  planned --> failed: setup or integrity failure
  running --> paused: graceful pause
  paused --> running: resume and recovery complete
  running --> completed: all required work terminal
  running --> cancelled: cancellation completes
  running --> failed: harness integrity failure
  paused --> cancelled: cancellation completes
  paused --> failed: recovery or integrity failure
  completed --> [*]
  cancelled --> [*]
  failed --> [*]
